2023-06-27/delegates/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-27/delegates)
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:52:15
   |
52 |     return if ((*dl).operation).is_some() {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:53:15
   |
53 |         (Some(((*dl).operation).expect("non-null function pointer")))
   |               ^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> src/main.rs:53:9
   |
53 | /         (Some(((*dl).operation).expect("non-null function pointer")))
54 | |             .expect("non-null function pointer")(p1)
   | |____________________________________________________^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `c2rust_out` (bin "main") due to 3 previous errors
